<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        >

        <item
            android:id="@+id/inicio"
            android:checked="false"
            android:icon="@drawable/menu_inicio"
            android:title="@string/Inicio" />

        <item
            android:id="@+id/agenda"
            android:checked="false"
            android:icon="@drawable/menu_agenda"
            android:title="@string/Agenda" />

        <item
            android:id="@+id/materiales"
            android:checked="false"
            android:icon="@drawable/menu_materiales"
            android:title="Materiales" />

        <item
            android:id="@+id/mensajes"
            android:checked="false"
            android:icon="@drawable/menu_mensajes"
            android:title="Mensajes" />

        <item
            android:id="@+id/calificaciones"
            android:checked="false"
            android:icon="@drawable/menu_calificaciones"
            android:title="Calificaciones" />

        <item
            android:id="@+id/pagos"
            android:checked="false"
            android:icon="@drawable/menu_pagos"
            android:title="Pagos" />

        <item
            android:id="@+id/factura"
            android:checked="false"
            android:icon="@drawable/menu_facturas"
            android:title="@string/factura" />

        <item
            android:id="@+id/visitas"
            android:checked="false"
            android:icon="@drawable/menu_medic"
            android:title="@string/visitas" />

        <item
            android:id="@+id/hojavida"
            android:checked="false"
            android:icon="@drawable/menu_hojavida"
            android:title="@string/hojavida" />

        <item
            android:id="@+id/estado"
            android:checked="false"
            android:icon="@drawable/menu_estado"
            android:title="@string/estado" />

        <item
            android:id="@+id/notificaciones"
            android:checked="false"
            android:icon="@drawable/menu_noti"
            android:title="@string/notificaciones" />

        <item
            android:id="@+id/acerca"
            android:checked="false"
            android:icon="@drawable/menu_acercade"
            android:title="@string/Acerca" />

        <item
            android:id="@+id/cerrar"
            android:checked="false"
            android:icon="@drawable/menu_cerrar"
            android:title="@string/cerrar" />

    </group>
</menu>